feat: menu sidebar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,405 @@
 </head>
 
 <body>
+    <!--### MENU ###-->
+    <aside class="sidebar">
+        <div class="sidebar-header">
+            <img src="img/senado-logov2.svg" alt="Logo do Senado" />
+        </div>
+
+        <nav class="menu-content">
+            <!--### MENU ###-->
+            <ul class="menu-items">
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-scale-balanced"></i>
+                            <span>Institucional</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Institucional
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Sobre o Senado</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Fale com o Senado</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Páginas Institucionais</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Serviços</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Especiais</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-user-group"></i>
+                            <span>Senadores</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Senadores
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Legislatura Atual</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Legislaturas Anteriores</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Presidentes</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Mais</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-chart-simple"></i>
+                            <span>Atividade Legislativa</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Atividade Legislativa
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Plenário</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Comissões</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Projetos e Matérias</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Informações Legislativas</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Legislação</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Orgãos do Parlamento</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Mais</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-volume-high"></i>
+                            <span>Comunicação</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Comunicação
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Senado Notícias</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Rádio Senado</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">TV Senado</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Senado Multimídia</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Senado Verifica</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Senado Fotos</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Assessoria de Imprensa</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-newspaper"></i>
+                            <span>Publicações</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Publicações
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Publicações Oficiais</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Estudos Legislativos</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Estudos Orçamentários</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Conselho Editorial</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Revista de Informação Legislativa</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Mais</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-sack-dollar"></i>
+                            <span>Orçamento</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Orçamento
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Legislação Orçamentária</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Estudos Orçamentários</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">SIGA Brasil</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Orçamento Fácil</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Glossário</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Perguntas Frequentes</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-briefcase"></i>
+                            <span>Transparência e Prestação de Contas</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            Transparência e Prestação de Contas
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Senadores</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Gestão e Governança</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Licitações e Contratos</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Gestão de Pessoas</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Orçamento e Finanças</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Dados Abertos</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Mais</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--### ITEM DO MENU ###-->
+                <li class="menu-item">
+                    <div class="submenu-item">
+                        <div class="item-title">
+                            <i class="fa-solid fa-id-badge"></i>
+                            <span>e-Cidadania</span>
+                        </div>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                    <!--### SUBMENU ###-->
+                    <ul class="menu-items submenu">
+                        <div class="menu-title">
+                            <i class="fa-solid fa-angle-left"></i>
+                            e-Cidadania
+                        </div>
+                        <li class="menu-item">
+                            <a href="">Sobre</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Ideia Legislativa</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Evento Interativo</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Consulta Pública</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Oficina Legislativa</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Entrar</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="">Mais</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+            <div class="links-center">
+                <div class="row">
+                    <span></span>
+                    <a href="https://www12.senado.leg.br/institucional/presidencia">Presidência</a>
+                    <a href="https://www12.senado.leg.br/institucional/omv">Observatório da Mulher</a>
+                    <a href="https://www12.senado.leg.br/institucional/ouvidoria">Ouvidoria</a>
+                    <a href="https://www12.senado.leg.br/institucional/procuradoria">Procuradoria da Mulher</a>
+                    <a href="https://www12.senado.leg.br/interlegis">Interlegis</a>
+                    <a href="https://www12.senado.leg.br/ifi">Institutição Fiscal Independente</a>
+                </div>
+
+                <div class="row">
+                    <span></span>
+                    <a href="https://www12.senado.leg.br/institucional/falecomosenado">Fale com o Senado</a>
+                    <a href="https://www12.senado.leg.br/transparencia/formtransparencia">Acesso à Informação</a>
+                    <a href="https://www12.senado.leg.br/institucional/carta-de-servicos">Carta de Serviços</a>
+                    <a href="https://www12.senado.leg.br/institucional/redes-sociais">Redes Sociais</a>
+                    <a
+                        href="https://www12.senado.leg.br/institucional/documentos/politica-de-uso-do-portal-do-senado-federal">Política
+                        de Uso</a>
+                    <a href="https://www12.senado.leg.br/institucional/protecao-dados">Proteção de Dados</a>
+                </div>
+
+                <div class="row">
+                    <span></span>
+                    <div class="lang">
+                        <a href="https://www12.senado.leg.br/institucional/carta-de-servicos/en/carta-de-servicos">English
+                            |</a>
+                        <a href="https://www12.senado.leg.br/institucional/carta-de-servicos/es/carta-de-servicos">Español
+                            |</a>
+                        <a
+                            href="https://www12.senado.leg.br/institucional/carta-de-servicos/fr/carta-de-servicos">Français</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <span></span>
+                    <a
+                        href="https://adm.senado.gov.br/cas-server/login?service=https%3A%2F%2Fintranet.senado.leg.br%2Fauth">
+                        <i class="fa-solid fa-lock"></i>
+                        Intranet
+                    </a>
+                </div>
+            </div>
+        </nav>
+
+    </aside>
+
     <!-- HEADER -->
     <header>
         <!-- HEADER TOP -->
@@ -28,7 +427,6 @@
             <div class="language">
                 <img src="https://flagsapi.com/BR/shiny/64.png" />
                 <span>Português</span>
-                <i class="fa-solid fa-chevron-down"></i>
             </div>
 
             <div class="logo-senado">
@@ -57,8 +455,8 @@
 
         <!-- HEADER CENTER -->
         <div class="header-center">
-            <div class="menu">
-                <button><i class="fa-solid fa-bars"></i></button>
+            <div class="navbar-menu">
+                <button class="btn-sidebar" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
                 <img src="img/senadonoticias-logo.svg" alt="Logo do Senado Notícias" />
             </div>
 
