--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         rel="stylesheet" />
 
     <link rel="stylesheet" href="css/main.min.css" />
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Desafio - Senado</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -426,7 +428,7 @@
         <div id="header" class="header-top">
             <div class="language">
                 <img src="https://flagsapi.com/BR/shiny/64.png" alt="Banderia do Brasil" />
-                <span>Português</span>
+                <span>Português-BR</span>
             </div>
 
             <div class="logo-senado">
